LU-19967 osd: take extent tree depth and sb into account

for credits calculation.

Fixes: 1f3e4df2fb ("LU-18562 osd: llog write batch block allocation")
Fixes: 0844727c55 ("LU-15143 osd-ldiskfs: osd_declare_write() underestimates credits")
Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: Ia7444a253cf631bd1234d6f05270a4633318d57b
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64514
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Li Dongyang <dongyangli@ddn.com>